tests/parser-test-files/bad-files/parse-let.2.error
error: Malformed let
  --> test:4:17
   |
 4 |  (define f (let ()))
   |                   ^ expected let body
