tests/parser-test-files/bad-files/parse-let.2.coal
;; BAD: Parse Let
(package test-package)

(define f (let ()))
